# ebac-course-project_bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  codefactor.yml
app_order/: factories.py  urls.py
app_order/migrations/: 0001_initial.py  0002_order_created_at_order_status.py
app_order/models/: order.py
app_order/serializers/: order_serializer.py
app_order/viewsets/: order_viewset.py
app_product/: factories.py  urls.py
app_product/migrations/: 0001_initial.py  0002_alter_product_price.py
app_product/models/: category.py  product.py
app_product/serializers/: category_serializer.py  product_serializer.py
app_product/viewsets/: product_viewset.py
bookstore/: settings.py  urls.py
tests/: test_category_serializer.py  test_order_serializer.py  test_order_viewset.py  test_product_serializer.py  test_product_viewset.py
