[project]
name = "bookstore-api"
version = "0.1.0"
description = "Projeto criado para aprendizado no curso de fullstack da EBAC no modulo de Django Rest Framework"
authors = [
    {name = "ewn1",email = "ewn.francisco@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=6.0.6,<7.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=7.0.0,<8.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]
